# typit-matrix

./: .env.example  .gitignore  Cargo.toml  flake.nix
src/: main.rs  message.rs
